# FullCTRL

./: README.md
docs/: protocol.md
firmware/: README.md
firmware/skr-mini-e3-g0/: CMakeLists.txt  startup_stm32g0b1xx.s  stm32g0b1xx.ld  toolchain-arm-none-eabi.cmake
firmware/skr-mini-e3-g0/include/: board.h  board_pins.h  protocol.h
firmware/skr-mini-e3-g0/src/: board.c  main.c  syscalls.c
host/: __init__.py  app.py
host/core/: __init__.py  config.py  jobs.py  motion.py  printer_state.py  protocol.py  serial_link.py
scripts/: README.md  build_firmware.sh  flash_firmware.sh  install.sh
web/: README.md
